--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="site_name" content="Yash Eksambekar - Portfolio" />
     <meta
       name="keywords"
-      content="Yash Eksambekar, Yash, Eksambekar, Developer, Spring Boot, Android, AWS, Cloud, AISSMS, AISSMSCOE, AISSMS-COE, DSC"
+      content="Yash Eksambekar, Yash, Eksambekar, Developer, Spring Boot, Android, AWS, Cloud, AISSMS, AISSMSCOE, AISSMS-COE, DSC, React"
     />
     <meta property="type" content="website" />
     <meta name="description" content="Yash Eksambekar - Portfolio" />
