Converted to typescript and used hooks

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     />
     <meta property="type" content="website" />
     <meta name="description" content="Yash Eksambekar - Portfolio" />
-    <base href="https://yash-eksambekar.web.app/" />
+    <!-- <base href="https://yash-eksambekar.web.app/" /> -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
